--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,17 +7,31 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.aaron.weatherapp.MainActivity">
+    tools:context="com.example.aaron.weatherapp.MainActivity"
+    android:id="@+id/view">
 
     <Button
-        android:id="@+id/weather_button"
+        android:id="@+id/current_button"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text="@string/current_weather"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="50dp" />
+
+    <Button
+        android:id="@+id/forecast_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/forecast_weather"
+        android:layout_alignParentBottom="true"
+        android:layout_toRightOf="@+id/current_button"
+        android:layout_marginBottom="50dp"/>
 
     <TextView
         android:id="@+id/weather_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/weather_button"/>
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="150dp"/>
 
 </RelativeLayout>
